--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/sounds/break.mp3
+    - assets/sounds/
     - assets/btn/scorebg.png
     - assets/btn/
     - assets/images/
